test/types/records/ferguson/choose-record/choose-record3.good
choose-record3.chpl:12: In function 'updateAndPrint':
choose-record3.chpl:14: error: cannot assign to const variable
choose-record3.chpl:15: error: cannot assign to const variable
